Sat Jan 10 14:52:00 GMT 2004 (njh)
  * docs:	Note that clamav-milter debugging option requires
	reconfiguration

Sat Jan 10 13:02:43 GMT 2004 (njh)
----------------------------------
  * libclamav: Added BinHex compression support

Fri Jan  9 18:27:19 GMT 2004 (njh)
----------------------------------
  * libclamav: ParseMimeHeader could corrupt arg

Fri Jan  9 18:01:28 GMT 2004 (njh)
----------------------------------
  * libclamav: Started handling BinHex code. For now only works with
  	"inline" messages where the BinHex is in the main body of the plain
	text portion.

Fri Jan  9 15:08:01 GMT 2004 (njh)
----------------------------------
  * libclamav: Re-engineered handling of 
	Handle Content-Type: /; name="eicar.com"
	which was lost in recent code change. Should now apply to more
	cases

Fri Jan  9 14:46:29 GMT 2004 (njh)
----------------------------------
  * libclamav: Removed duplicated code in multipart handler in mbox.c

Fri Jan  9 10:21:27 GMT 2004 (njh)
----------------------------------
  * libclamav: Locate uuencoded viruses hidden in text poritions of
  	multipart/mixed mime messages

Fri Jan  9 02:07:53 CET 2004 (tk)
---------------------------------
  * freshclam: restored old command line options (except for proxy settings) -
	       if activated, they will overwrite settings from freshclam.conf
  * clamscan: --beep

Wed Jan  7 21:50:28 CET 2004 (tk)
---------------------------------
  * clamscan: removed support for sendfile() under Linux

Tue Jan  6 14:42:00 GMT 2004 (njh)
----------------------------------
  * libclamav: Handle headers which do not not have a space after the ':'
  	Example mail submitted by "Diego d'Ambra" <da@softcom.dk>

Tue Jan  6 14:43:42 CET 2004 (tk)
---------------------------------
  * clamd: cfgfile.c: HTTPProxyPort is now OPT_NUM and not OPT_STR (the bug
		      found by Nigel)

Sat Jan  3 11:30:38 CET 2004 (tk)
---------------------------------