@@ -1,4 +1,10 @@
+Sat Jan 10 16:23:54 GMT 2004 (njh)
+----------------------------------
+  * clamav-milter: Added OpenBSD instructions from <peo_s@incedo.org>
+	and --signature-file option
+
 Sat Jan 10 14:52:00 GMT 2004 (njh)
+----------------------------------
   * docs:	Note that clamav-milter debugging option requires
 	reconfiguration
 
